microservices/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drinkwater
  labels:
    name: drinkwater
    app.kubernetes.io/name: drinkwater
    app.kubernetes.io/version: "1.0.0"
