microservices/k8s/50-loki-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app: monitoring
